Fix: Text align all to the left

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -37,7 +37,6 @@ h3 {
 p {
     color: $black;
     font-size: 15px;
-    text-align: justify;
     line-height: 1.67;
     margin: 0;
 }
